# iamdumb

./: README.md  iamdumb.py  pyproject.toml
